# new-huxley

./: .clangd  .gitignore  CMakeLists.txt  Main.qml  Makefile  README.md  cli  db_inspect.py  gui_db.py  huxley  huxley-keygen.cpp  huxley-pi-keygen  huxley.db-shm  huxley.db-wal  keygen  main.cpp  mini_client  mini_client.cpp
Utils/: CustomCheckBox.qml  CustomInput.qml
backup/: Main.qml
client/: Makefile  README.md  cli_app.py  client.cpp  client.drawio  client.hpp  client.py  gui_main.py  huxley_cli  main.cpp  practice.py  protocol.py  qt_session.py  store.py  tui_app.py
docs/: protocol.md  test_results.md
include/: AuthManager.h  ClientConnection.h  ClientNotifier.h  ClientState.h  CryptoEngine.h  Database.h  DatabaseEngine.h  HuxleyServer.h  MessageRouter.h  OfflineDelivery.h  ProtocolHandler.h  SingleServer.h  SingleWorker.h  StatusManager.h  WorkerThread.h
mk/: cli.mk  mini.mk  paths.mk  rules.mk  targets.mk  toolchains.mk
qml/: ChatShell.qml  ChatView.qml  ContactsFrame.qml  HeaderBar.qml  InputBar.qml  LoginFrame.qml  RegisterFrame.qml  SettingsDrawer.qml  Theme.qml  ToastHost.qml
scripts/: Makefile  SingleWorker.h  client_scenario.py  conversations.json  scenario.cpp  scenario.hpp
src/: AuthManager.cpp  ClientState.cpp  CryptoEngine.cpp  Database.cpp  DatabaseEngine.cpp  HuxleyServer.cpp  MessageRouter.cpp  OfflineDelivery.cpp  ProtocolHandler.cpp  SingleServer.cpp  SingleWorker.cpp  StatusManager.cpp  Worker2.cpp  WorkerThread.cpp  main.cpp
src/controller/: ClientController.cpp  ClientController.h
src/model/: ChatHistoryModel.cpp  ChatHistoryModel.h  ContactListModel.cpp  ContactListModel.h  ContactProxyModel.cpp  ContactProxyModel.h
src/net/: ProtocolClient.cpp  ProtocolClient.h
src/service/: MessageService.cpp  MessageService.h
tests/: Makefile  test_auth.cpp  test_database.cpp  test_message.cpp
